--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,33 @@
-<div class="row">
+<section class="login">
+  <div class="form">
+      <div class="form__img">
+          LOGO :*
+      </div>
+      <h2 class="heading-secondary">
+          {{ 'login.login' | translate }}
+      </h2>
+      <form class="form__box" [formGroup]="loginForm" (ngSubmit)="onLogin()">
+          <div class="form__field">
+             <label for="" class="form__label">{{ 'login.email' | translate }}</label>
+              <input formControlName="login" type="text" class="form__input">
+              <span class="invalid-form" *ngIf="loginFormControl.login.touched && loginFormControl.login.errors?.required">
+                {{ 'form.fieldRequired' | translate }}
+              </span>
+          </div>
+          <div class="form__field">
+              <label for="" class="form__label">{{ 'login.password' | translate }}</label>
+              <input formControlName="password" type="password" class="form__input">
+              <span class="invalid-form" *ngIf="loginFormControl.password.touched && loginFormControl.password.errors?.required">
+                {{ 'form.fieldRequired' | translate }}
+              </span>
+          </div>
+          <input type="submit">
+          <a class="btn-text">{{ 'login.register' | translate}}</a>
+      </form>
+  </div>
+</section>
+
+<!--<div class="row">
   <div class="col-md-6 mx-auto p-0">
     <div class="card">
       <div class="login-box">
@@ -50,3 +79,5 @@
     </div>
   </div>
 </div>
+-->
+
