--- a/frontend/src/app/components/registration/registration.component.html
+++ b/frontend/src/app/components/registration/registration.component.html
@@ -1,7 +1,7 @@
 <section class="registration">
     <div class="form">
         <div class="form__img">
-            <img class="logo" src="css/images/logo1.png" alt="logo">
+            <img class="logo" [src]="logoPath" alt="logo">
         </div>
         <h2 class="heading-secondary">
             {{ 'login.register' | translate }}
