corrected minor mistakes with an image

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <section class="login">
   <div class="form">
       <div class="form__img">
-          LOGO :*
+        <img class="logo" [src]="logoPath" alt="logo">
       </div>
       <h2 class="heading-secondary">
           {{ 'login.login' | translate }}
