--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -1,7 +1,7 @@
 //COLORS
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
-$color-primary-dark: #3ec598;
+$color-primary-dark: #3eb1c5;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
