--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -9,77 +9,23 @@
       <form class="form__box" [formGroup]="loginForm" (ngSubmit)="onLogin()">
           <div class="form__field">
              <label for="" class="form__label">{{ 'login.email' | translate }}</label>
-              <input formControlName="login" type="text" class="form__input">
-              <span class="invalid-form" *ngIf="loginFormControl.login.touched && loginFormControl.login.errors?.required">
+              <input formControlName="email" type="text" class="form__input">
+              <div class="invalid-form" *ngIf="loginFormControl.email.touched && loginFormControl.email.errors?.required">
                 {{ 'form.fieldRequired' | translate }}
-              </span>
+              </div>
+              <div class="invalid-form" *ngIf="loginFormControl.email.touched && loginFormControl.email.errors?.email">
+                {{ 'form.invalidEmail' | translate }}
+              </div>
           </div>
           <div class="form__field">
               <label for="" class="form__label">{{ 'login.password' | translate }}</label>
               <input formControlName="password" type="password" class="form__input">
-              <span class="invalid-form" *ngIf="loginFormControl.password.touched && loginFormControl.password.errors?.required">
+              <div class="invalid-form" *ngIf="loginFormControl.password.touched && loginFormControl.password.errors?.required">
                 {{ 'form.fieldRequired' | translate }}
-              </span>
+              </div>
           </div>
           <input type="submit">
-          <a class="btn-text">{{ 'login.register' | translate}}</a>
+          <a routerLink="register" class="btn-text">{{ 'login.register' | translate}}</a>
       </form>
   </div>
 </section>
-
-<!--<div class="row">
-  <div class="col-md-6 mx-auto p-0">
-    <div class="card">
-      <div class="login-box">
-        <div class="login-snip"> <input id="tab-1" type="radio" name="tab" class="sign-in" checked>
-          <label for="tab-1" class="tab">{{ 'login.login' | translate }}</label>
-          <input id="tab-2" type="radio" name="tab" class="sign-up">
-          <label for="tab-2" class="tab">{{ 'login.register' | translate }}</label>
-          <div class="login-space">
-            <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-              <div class="login">
-                <div class="group">
-                  <label class="label">{{ 'login.username' | translate }}</label>
-                  <input formControlName="login" type="text" class="input" placeholder="{{ 'login.enterUsername' | translate }}">
-                  <span class="invalid-form" *ngIf="loginFormControl.login.touched && loginFormControl.login.errors?.required">
-                    {{ 'form.fieldRequired' | translate }}
-                  </span>
-                </div>
-                <div class="group">
-                  <label class="label">{{ 'login.password' | translate }}</label>
-                  <input formControlName="password" type="password" class="input" data-type="password" placeholder="{{ 'login.enterPassword' | translate }}">
-                <span class="invalid-form" *ngIf="loginFormControl.password.touched && loginFormControl.password.errors?.required">
-                  {{ 'form.fieldRequired' | translate }}
-                </span>
-                </div>
-                <div class="group">
-                  <input type="submit" class="button" value="{{ 'login.login' | translate }}">
-                </div>
-                <div class="hr"></div>
-              </div>
-            </form>
-
-
-            <div class="sign-up-form">
-              <div class="group"> <label for="user" class="label">{{ 'login.username' | translate }}</label> <input
-                  id="user" type="text" class="input" placeholder="{{ 'login.enterUsername' | translate }}"> </div>
-              <div class="group"> <label for="pass" class="label">{{ 'login.password' | translate }}</label> <input
-                  id="pass" type="password" class="input" data-type="password"
-                  placeholder="{{ 'login.enterPassword' | translate }}"> </div>
-              <div class="group"> <label for="pass" class="label">{{ 'login.repeatPassword' | translate }}</label>
-                <input id="pass" type="password" class="input" data-type="password"
-                  placeholder="{{ 'login.repeatPassword' | translate }}"> </div>
-              <div class="group"> <label for="pass" class="label">{{ 'login.email' | translate }}</label> <input
-                  id="pass" type="text" class="input" placeholder="{{ 'login.enterEmail' | translate }}"> </div>
-              <div class="group"> <input type="submit" class="button" value="{{ 'login.register' | translate }}"> </div>
-              <div class="hr"></div>
-              <div class="foot"> <label for="tab-1">{{ 'login.doYouHaveAccount' | translate }}</label> </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
--->
-
