--- a/frontend/src/app/components/registration/registration.component.html
+++ b/frontend/src/app/components/registration/registration.component.html
@@ -6,43 +6,50 @@
         <h2 class="heading-secondary">
             {{ 'login.register' | translate }}
         </h2>
-        <form class="form__box" [formGroup]="loginForm" (ngSubmit)="onLogin()">
+        <form class="form__box" [formGroup]="registrationForm" (ngSubmit)="onRegister()">
             <div class="form__field">
-               <label for="" class="form__label">Imię</label>
-                <input type="text" class="form__input">
-                <span class="invalid-form" *ngIf="loginFormControl.login.touched && loginFormControl.login.errors?.required">
+               <label for="" class="form__label">{{ 'login.name' | translate }}</label>
+                <input type="text" formControlName="name" class="form__input">
+                <div class="invalid-form" *ngIf="registrationFormControl.name.touched && registrationFormControl.name.errors?.required">
                     {{ 'form.fieldRequired' | translate }}
-                  </span>
+                  </div>
             </div>
             <div class="form__field">
-                <label for="" class="form__label">Nazwisko</label>
-                 <input type="text" class="form__input">
-                 <span class="invalid-form" *ngIf="loginFormControl.login.touched && loginFormControl.login.errors?.required">
+                <label for="" class="form__label">{{ 'login.surname' | translate }}</label>
+                 <input type="text" formControlName="surname" class="form__input">
+                 <div class="invalid-form" *ngIf="registrationFormControl.surname.touched && registrationFormControl.surname.errors?.required">
                     {{ 'form.fieldRequired' | translate }}
-                  </span>
+                  </div>
              </div>
              <div class="form__field">
-                <label for="" class="form__label">{{ login.email | translate }}</label>
-                 <input type="text" class="form__input">
-                 <span class="invalid-form" *ngIf="loginFormControl.login.touched && loginFormControl.login.errors?.required">
-                    {{ 'form.fieldRequired' | translate }}
-                  </span>
+                <label for="" class="form__label">{{ 'login.email' | translate }}</label>
+                 <input type="text" formControlName="email" class="form__input">
+                 <div class="invalid-form" *ngIf="registrationFormControl.email.touched && registrationFormControl.email.errors?.required">
+                  {{ 'form.fieldRequired' | translate }}
+                </div>
+                  <div class="invalid-form" *ngIf="registrationFormControl.email.touched && registrationFormControl.email.errors?.email">
+                    {{ 'form.invalidEmail' | translate }}
+                  </div>
              </div>
             <div class="form__field">
-                <label for="" class="form__label">{{ login.enterPassword | translate}}</label>
-                <input type="password" class="form__input">
-                <span class="invalid-form" *ngIf="loginFormControl.login.touched && loginFormControl.login.errors?.required">
+                <label for="" class="form__label">{{ 'login.enterPassword' | translate}}</label>
+                <input type="password" formControlName="password" autocomplete="new-password" class="form__input">
+                <div class="invalid-form" *ngIf="registrationFormControl.password.touched && registrationFormControl.password.errors?.required">
                     {{ 'form.fieldRequired' | translate }}
-                  </span>
+                </div>
             </div>
             <div class="form__field">
-                <label for="" class="form__label">{{ login.repeatPassword | translate}}</label>
-                <input type="password" class="form__input">
-                <span class="invalid-form" *ngIf="loginFormControl.login.touched && loginFormControl.login.errors?.required">
+                <label for="" class="form__label">{{ 'login.confirmPassword' | translate}}</label>
+                <input type="password" formControlName="confirmPassword" class="form__input">
+                <div class="invalid-form" *ngIf="registrationFormControl.confirmPassword.touched && registrationFormControl.confirmPassword.errors?.required">
                     {{ 'form.fieldRequired' | translate }}
-                  </span>
+                </div>
+                <div class="invalid-form" *ngIf="registrationFormControl.password.touched && registrationFormControl.confirmPassword.errors?.validatePasswordConfirmation">
+                  {{ 'form.passwordsDontMatch' | translate }}
+                </div>
             </div>
             <input type="submit">
+            <a routerLink="login" class="btn-text">{{ 'login.doYouHaveAccount' | translate}}</a>
             </form>
     </div>
 </section>
