--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Shippori+Antique+B1&display=swap');
+
 //COLORS
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
