--- a/frontend/src/app/components/registration/registration.component.scss
+++ b/frontend/src/app/components/registration/registration.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Shippori+Antique+B1&display=swap');
+
 @mixin clearfix {
     &::after {
         content: "";
@@ -35,6 +37,8 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+
 
 *,
 *::after,
