--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -43,7 +43,7 @@ $gutter-horizontal: 6rem;
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62,5%;
 }
 
 body {
@@ -58,12 +58,12 @@ body {
 }
 
 .heading-secondary {
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 700;
     font-family: 'Shippori Antique B1', sans-serif;
     color: $color-black;
     text-align: center;
-    padding: 1rem;    
+    padding: .1rem;    
 }
 
 input[type=submit]{
@@ -72,13 +72,13 @@ input[type=submit]{
     letter-spacing: 2px;
     font-weight: 600;
     font-family: "Montserrat", sans-serif;
-    padding: 1.5rem 3rem;
+    padding: 1rem 2rem;
     display: block;
     margin: 0 auto;
     margin-top: 1.5rem;
     border: none;
     border-radius: 5rem;
-    font-size: 1rem;
+    font-size: .5rem;
     background-color: $color-primary;
     transition: all .5s;    
 
@@ -98,7 +98,7 @@ input[type=submit]{
     &:visited {
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-    font-size: 1.2rem;
+    font-size: .8rem;
     font-weight: 700;
     color: $color-grey-dark;
     display: inline-block;
@@ -113,8 +113,8 @@ input[type=submit]{
 
 .form {
     background-color: $color-grey-light-1;
-    width: 35rem;
-    height: 52rem;
+    width: 25vw;
+    height: 60vh;
     margin: auto;
     border-radius: 1rem;
     position: absolute;
@@ -124,13 +124,13 @@ input[type=submit]{
     box-shadow: 1rem 1rem 4rem rgba($color-black, .4);
     
         &__img {
-            height: 15rem;
-            width: 15rem;
-            margin: 2rem auto;        
+            height: 6rem;
+            width: 6rem;
+            margin: 1rem auto;        
         }
     
         &__box {        
-            padding: 2rem;
+            padding: .5rem;
             margin: 0 auto;
             text-align: center;
         }
@@ -138,13 +138,13 @@ input[type=submit]{
         &__label {
             color: $color-grey-dark;
             font-family: 'Montserrat', sans-serif;
-            font-size: 1.5rem;
+            font-size: .9rem;
             font-weight: 700;
             background-color: $color-grey-light-1;
             display: block;
             margin: 0 auto;
             margin-top: 1rem;
-            padding: .3rem;
+            padding: .1rem;
             text-align: left;
             width: 75%;
         }
@@ -156,7 +156,7 @@ input[type=submit]{
             color: $color-black;
             display: inline-block;
             width: 75%;
-            padding: .5rem;
+            padding: .1rem;
             border: none;
             border-bottom: 2px solid $color-grey-light-2;
     
