--- a/frontend/src/app/components/registration/registration.component.scss
+++ b/frontend/src/app/components/registration/registration.component.scss
@@ -64,11 +64,12 @@ body {
 }
 
 .heading-secondary {
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 700;
     font-family: 'Shippori Antique B1', sans-serif;
     color: $color-black;
-    text-align: center;    
+    text-align: center;
+    padding: .1rem;   
     
 }
 
@@ -78,13 +79,13 @@ input[type=submit]{
     letter-spacing: 2px;
     font-weight: 600;
     font-family: "Montserrat", sans-serif;
-    padding: 1.5rem 3rem;
+    padding: 1rem 2rem;
     display: block;
     margin: 0 auto;
     margin-top: 1.5rem;
     border: none;
     border-radius: 5rem;
-    font-size: 1rem;
+    font-size: .5rem;
     background-color: $color-primary;
     transition: all .5s;    
 
@@ -104,7 +105,7 @@ input[type=submit]{
     &:visited {
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-    font-size: 1.2rem;
+    font-size: 08rem;
     font-weight: 700;
     color: $color-grey-dark;
     display: inline-block;
@@ -120,8 +121,8 @@ input[type=submit]{
 
 .form {
     background-color: $color-grey-light-1;
-    width: 35rem;
-    height: 65rem;
+    width: 25vw;
+    height: 65vh;
     margin: auto;
     border-radius: 1rem;
     position: absolute;
@@ -131,13 +132,13 @@ input[type=submit]{
     box-shadow: 1rem 1rem 4rem rgba($color-black, .4);
     
         &__img {
-            height: 10rem;
-            width: 10rem;
-            margin: 2rem auto;   
+            height: 6rem;
+            width: 6rem;
+            margin: 1rem auto;   
         }
     
         &__box {        
-            padding: 2rem;
+            padding: .5rem;
             margin: 0 auto;
             text-align: center;
         }
@@ -145,13 +146,13 @@ input[type=submit]{
         &__label {
             color: $color-grey-dark;
             font-family: 'Montserrat', sans-serif;
-            font-size: 1.5rem;
+            font-size: .9rem;
             font-weight: 700;
             background-color: $color-grey-light-1;
             display: block;
             margin: 0 auto;
             margin-top: 1rem;
-            padding: .3rem;
+            padding: .1rem;
             text-align: left;
             width: 75%;
         }
@@ -163,7 +164,7 @@ input[type=submit]{
             color: $color-black;
             display: inline-block;
             width: 75%;
-            padding: .5rem;
+            padding: .1rem;
             border: none;
             border-bottom: 2px solid $color-grey-light-2;
     
