--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -159,6 +159,7 @@ input[type=submit]{
             padding: .1rem;
             border: none;
             border-bottom: 2px solid $color-grey-light-2;
+            
     
             &:focus {
                 border-bottom: 2px solid $color-grey-light-2;
@@ -181,7 +182,14 @@ input[type=submit]{
         margin-top: 5vh;        
     }
 
-
+.invalid-form {
+    font-size: .8rem;
+    font-weight: 700;
+    color: red;    
+    font-family: "Montserrat", sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
 
 
