--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -10,18 +10,24 @@
           <div class="form__field">
              <label for="" class="form__label">{{ 'login.email' | translate }}</label>
               <input formControlName="email" type="text" class="form__input">
-              <div class="invalid-form" *ngIf="loginFormControl.email.touched && loginFormControl.email.errors?.required">
+              <div class="form__validation">
+                <p class="form__validation--blank">&nbsp;</p>
+                <div class="invalid-form" *ngIf="loginFormControl.email.touched && loginFormControl.email.errors?.required">
                 {{ 'form.fieldRequired' | translate }}
-              </div>
-              <div class="invalid-form" *ngIf="loginFormControl.email.touched && loginFormControl.email.errors?.email">
+                </div>
+                <div class="invalid-form" *ngIf="loginFormControl.email.touched && loginFormControl.email.errors?.email">
                 {{ 'form.invalidEmail' | translate }}
+                </div>
               </div>
           </div>
           <div class="form__field">
               <label for="" class="form__label">{{ 'login.password' | translate }}</label>
               <input formControlName="password" type="password" class="form__input">
+              <div class="form__validation">
+                <p class="form__validation--blank">&nbsp;</p>
               <div class="invalid-form" *ngIf="loginFormControl.password.touched && loginFormControl.password.errors?.required">
                 {{ 'form.fieldRequired' | translate }}
+              </div>
               </div>
           </div>
           <input type="submit">
