--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -5,11 +5,7 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #3eb1c5;
 
-$color-secondary-light: #ffb900;
-$color-secondary-dark: #ff7730;
-
-$color-tertiary-light: #2998ff;
-$color-tertiary-dark: #5643fa;
+$color-invalid: #ff5930;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
@@ -20,11 +16,6 @@ $color-black: #000;
 
 //FONT
 $default-font-size: 1.6rem;
-
-//GRID
-$grid-width: 114rem;
-$gutter-vertical: 8rem;
-$gutter-horizontal: 6rem;
 
 @mixin clearfix {
     &::after {
@@ -114,7 +105,7 @@ input[type=submit]{
 .form {
     background-color: $color-grey-light-1;
     width: 25vw;
-    height: 60vh;
+    height: 62vh;
     margin: auto;
     border-radius: 1rem;
     position: absolute;
@@ -166,7 +157,20 @@ input[type=submit]{
                 background-color: $color-grey-light-2;
                 outline: none;
             }
-        }  
+        }
+        
+        &__validation {
+            position: relative;
+
+            &--blank {
+                font-size: .8rem;
+                font-weight: 700;
+                font-family: "Montserrat", sans-serif;
+                margin: 0;
+                padding: 0;
+                opacity: 0;
+            }
+        }
     }
     
     .logo {
@@ -183,12 +187,18 @@ input[type=submit]{
     }
 
 .invalid-form {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
     font-size: .8rem;
     font-weight: 700;
-    color: red;    
+    color: $color-invalid;    
     font-family: "Montserrat", sans-serif;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
+    z-index: 20;
+
 }
 
 
