--- a/frontend/src/app/components/registration/registration.component.html
+++ b/frontend/src/app/components/registration/registration.component.html
@@ -10,42 +10,57 @@
             <div class="form__field">
                <label for="" class="form__label">{{ 'login.name' | translate }}</label>
                 <input type="text" formControlName="name" class="form__input">
+                <div class="form__validation">
+                <p class="form__validation--blank">&nbsp;</p>
                 <div class="invalid-form" *ngIf="registrationFormControl.name.touched && registrationFormControl.name.errors?.required">
                     {{ 'form.fieldRequired' | translate }}
+                  </div>
                   </div>
             </div>
             <div class="form__field">
                 <label for="" class="form__label">{{ 'login.surname' | translate }}</label>
                  <input type="text" formControlName="surname" class="form__input">
+                 <div class="form__validation">
+                <p class="form__validation--blank">&nbsp;</p>
                  <div class="invalid-form" *ngIf="registrationFormControl.surname.touched && registrationFormControl.surname.errors?.required">
                     {{ 'form.fieldRequired' | translate }}
                   </div>
+                  </div>                  
              </div>
              <div class="form__field">
                 <label for="" class="form__label">{{ 'login.email' | translate }}</label>
                  <input type="text" formControlName="email" class="form__input">
+                 <div class="form__validation">
+                <p class="form__validation--blank">&nbsp;</p>
                  <div class="invalid-form" *ngIf="registrationFormControl.email.touched && registrationFormControl.email.errors?.required">
                   {{ 'form.fieldRequired' | translate }}
                 </div>
                   <div class="invalid-form" *ngIf="registrationFormControl.email.touched && registrationFormControl.email.errors?.email">
                     {{ 'form.invalidEmail' | translate }}
                   </div>
+                  </div>
              </div>
             <div class="form__field">
                 <label for="" class="form__label">{{ 'login.enterPassword' | translate}}</label>
                 <input type="password" formControlName="password" autocomplete="new-password" class="form__input">
+                <div class="form__validation">
+                <p class="form__validation--blank">&nbsp;</p>
                 <div class="invalid-form" *ngIf="registrationFormControl.password.touched && registrationFormControl.password.errors?.required">
                     {{ 'form.fieldRequired' | translate }}
+                </div>
                 </div>
             </div>
             <div class="form__field">
                 <label for="" class="form__label">{{ 'login.confirmPassword' | translate}}</label>
                 <input type="password" formControlName="confirmPassword" class="form__input">
+                <div class="form__validation">
+                <p class="form__validation--blank">&nbsp;</p>
                 <div class="invalid-form" *ngIf="registrationFormControl.confirmPassword.touched && registrationFormControl.confirmPassword.errors?.required">
                     {{ 'form.fieldRequired' | translate }}
                 </div>
                 <div class="invalid-form" *ngIf="registrationFormControl.password.touched && registrationFormControl.confirmPassword.errors?.validatePasswordConfirmation">
                   {{ 'form.passwordsDontMatch' | translate }}
+                </div>
                 </div>
             </div>
             <input type="submit">
