--- a/frontend/src/app/components/registration/registration.component.scss
+++ b/frontend/src/app/components/registration/registration.component.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Shippori+Antique+B1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Montserrat:wght@100&display=swap');
 
 @mixin clearfix {
     &::after {
@@ -19,6 +19,9 @@ $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
 $color-grey-dark: rgb(85, 85, 85);
+$color-grey-dark-2: #333;
+$color-grey-dark-3: #222;
+
 $color-white: #fff;
 $color-black: #000;
 
@@ -50,9 +53,9 @@ body {
 
 .heading-secondary {
     font-size: 1rem;
-    font-weight: 700;
-    font-family: 'Shippori Antique B1', sans-serif;
-    color: $color-black;
+    font-weight: 900;
+    font-family: 'Lato', sans-serif;
+    color: $color-grey-dark-3;
     text-align: center;
     padding: .1rem;
     margin: 1.5rem 0;   
