Added logic for user controller

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
               </div>
           </div>
           <input type="submit">
-          <a routerLink="register" class="btn-text">{{ 'login.register' | translate}}</a>
+          <a routerLink="../register" class="btn-text">{{ 'login.register' | translate}}</a>
       </form>
   </div>
 </section>
