--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -97,6 +97,7 @@ input[type=submit]{
     color: $color-grey-dark;
     display: inline-block;
     margin-top: 1rem;
+    border-bottom: 2px solid transparent;
     }
 
     &:active,
