--- a/frontend/src/app/components/registration/registration.component.scss
+++ b/frontend/src/app/components/registration/registration.component.scss
@@ -100,6 +100,7 @@ input[type=submit]{
     display: inline-block;
     margin-top: .7rem;
     margin-bottom: .5rem;
+    border-bottom: 2px solid transparent;
     }
 
     &:active,
