--- a/frontend/src/app/components/logged-out/logged-out.component.html
+++ b/frontend/src/app/components/logged-out/logged-out.component.html
@@ -1,11 +1,11 @@
-<section class="login">
-    <div class="logged-out">
-        <div class="logged-out__img">
-          <!-- <img class="logo" [src]="logoPath" alt="logo"> -->
+<section class="logged-out">
+    <div class="logged">
+        <div class="logged__img">
+          <img class="logo" [src]="logoPath" alt="logo">
         </div>
-        <div class="logged-out__box">
-            <p>Twoje konto zostało utworzone!</p>
-            <p>Zostałeś wylogowany!</p>
+        <div class="logged__box">
+            <p class="logged__text">{{ 'loggedOut.accountCreated' | translate }}</p>
+            <p class="logged__text logged__text--1">{{ 'loggedOut.loggedOut' | translate }}</p>
         </div>
             <a class="btn">{{ 'login.login' | translate}}</a>
     </div>
