--- a/frontend/src/app/components/logged-out/logged-out.component.scss
+++ b/frontend/src/app/components/logged-out/logged-out.component.scss
@@ -67,8 +67,7 @@ body {
     font-weight: 600;
     font-family: "Montserrat", sans-serif;
     padding: 1rem 2rem;
-    display: block;
-    margin: 0 auto;
+    display: inline-block;
     margin-top: 1.5rem;
     border: none;
     border-radius: 5rem;
@@ -87,29 +86,11 @@ body {
     }
 }
 
-.btn-text {
-    &:link,
-    &:visited {
-    text-decoration: none;
-    font-family: "Montserrat", sans-serif;
-    font-size: .8rem;
-    font-weight: 700;
-    color: $color-grey-dark;
-    display: inline-block;
-    margin-top: 1rem;
-    border-bottom: 2px solid transparent;
-    }
-
-    &:active,
-    &:hover {
-        border-bottom: 2px solid $color-primary-dark;
-    }
-}
-
-.logged-out {
+.logged {
     background-color: $color-grey-light-1;
     width: 25vw;
-    height: 65vh;
+    height: 50vh;
+    text-align: center;
     margin: auto;
     border-radius: 1rem;
     position: absolute;
@@ -119,31 +100,33 @@ body {
     box-shadow: 1rem 1rem 4rem rgba($color-black, .4);
     
         &__img {
-            height: 6rem;
-            width: 6rem;
-            margin: 2rem auto;        
+            height: 7rem;
+            width: 7rem;
+            margin: 3rem auto;                  
         }
     
         &__text {        
             padding: .5rem;
             margin: 0 auto;
             text-align: center;
-        }
-    
+
+            &--1 {
+                display: none;
+            }
+        }    
             
     .logo {
         width: 100%;
-        transform: scale(2.2);
-        
-    }
-
-    .login {
-        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-        height: 95vh;
-        width: 100%;
-        margin-top: 5vh;        
+        transform: scale(2.2);        
     }
 }
+
+.logged-out {
+        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+        height: 100vh;
+        width: 100%;            
+    }
+
 
 
 
