added background image and style to the welcome component

--- a/frontend/src/app/components/welcome/welcome.component.html
+++ b/frontend/src/app/components/welcome/welcome.component.html
@@ -1,1 +1,17 @@
-<p>welcome works!</p>
+<section class="welcome">
+    <header class="header">
+        <div class="header__logo-box">
+            <!--- <img src="assets/images/logo.png" alt="Logo" class="header__logo"> -->
+        </div>
+        <div class="header__text-box">
+            <h1 class="heading-primary">
+                Lorem ipsum             
+            </h1>
+            <h2 class="heading-secondary">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque provident praesentium adipisci placeat esse libero.
+            </h2>
+                <a class="btn">{{ 'login.login' | translate}}</a>
+                <a class="btn">{{'login.register' | translate }}</a>
+        </div>
+    </header>
+</section>
