--- a/frontend/src/app/components/welcome/welcome.component.html
+++ b/frontend/src/app/components/welcome/welcome.component.html
@@ -5,13 +5,13 @@
         </div>
         <div class="header__text-box">
             <h1 class="heading-primary">
-                Lorem ipsum             
+                Lorem ipsum
             </h1>
             <h2 class="heading-secondary">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque provident praesentium adipisci placeat esse libero.
             </h2>
-                <a class="btn">{{ 'login.login' | translate}}</a>
-                <a class="btn">{{'login.register' | translate }}</a>
+                <a routerLink="login" class="btn">{{ 'login.login' | translate}}</a>
+                <a routerLink="register" class="btn">{{'login.register' | translate }}</a>
         </div>
     </header>
 </section>
