--- a/frontend/src/app/components/logged-out/logged-out.component.html
+++ b/frontend/src/app/components/logged-out/logged-out.component.html
@@ -4,10 +4,9 @@
           <img class="logo" [src]="logoPath" alt="logo">
         </div>
         <div class="logged__box">
-            <p class="logged__text logged__text--1">{{ 'loggedOut.loggedOut' | translate }}</p>
-            <p *ngIf="!loggedOut" class="logged__text">{{ 'loggedOut.accountCreated' | translate }}</p>
+            <p class="logged__text">{{ 'loggedOut.loggedOut' | translate }}</p>
         </div>
-            <a class="btn">{{ 'login.login' | translate}}</a>
+            <a routerLink="login" class="btn">{{ 'login.login' | translate}}</a>
     </div>
   </section>
 
