--- a/frontend/src/app/components/public/registration/registration.component.html
+++ b/frontend/src/app/components/public/registration/registration.component.html
@@ -62,6 +62,9 @@
                 <div class="invalid-form" *ngIf="registrationFormControl.password.touched && registrationFormControl.confirmPassword.errors?.validatePasswordConfirmation">
                   {{ 'form.passwordsDontMatch' | translate }}
                 </div>
+                <div class="invalid-credentials" *ngIf="accountExistsError">
+                  {{ 'form.accountExists' | translate }}
+                </div>
                 </div>
             </div>
             <input type="submit">
