--- a/frontend/src/app/components/public/logged-out/logged-out.component.html
+++ b/frontend/src/app/components/public/logged-out/logged-out.component.html
@@ -6,7 +6,7 @@
         <div class="logged__box">
             <p class="logged__text">{{ 'loggedOut.loggedOut' | translate }}</p>
         </div>
-            <a routerLink="login" class="btn">{{ 'login.login' | translate}}</a>
+            <a routerLink="../login" class="btn">{{ 'login.login' | translate}}</a>
     </div>
   </section>
 
