--- a/frontend/src/app/components/public/login/login.component.scss
+++ b/frontend/src/app/components/public/login/login.component.scss
@@ -48,7 +48,7 @@ body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.7;
-    color: $color-grey-dark;    
+    color: $color-grey-dark;
 }
 
 .heading-secondary {
@@ -57,7 +57,7 @@ body {
     font-family: 'Lato', sans-serif;
     color: $color-grey-dark-3;
     text-align: center;
-    padding: .1rem;    
+    padding: .1rem;
 }
 
 input[type=submit]{
@@ -74,7 +74,7 @@ input[type=submit]{
     border-radius: 5rem;
     font-size: .5rem;
     background-color: $color-primary;
-    transition: all .5s;    
+    transition: all .5s;
 
     &:hover {
         box-shadow: 0 .5rem 2rem rgba($color-black,0.2);
@@ -117,19 +117,19 @@ input[type=submit]{
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 1rem 1rem 4rem rgba($color-black, .4);
-    
+
         &__img {
             height: 6rem;
             width: 6rem;
-            margin: 2.5rem auto;        
+            margin: 2.5rem auto;
         }
-    
-        &__box {        
+
+        &__box {
             padding: .5rem;
             margin: 0 auto;
             text-align: center;
         }
-    
+
         &__label {
             color: $color-grey-dark;
             font-family: 'Montserrat', sans-serif;
@@ -143,7 +143,7 @@ input[type=submit]{
             text-align: left;
             width: 75%;
         }
-    
+
         &__input {
             background-color: $color-grey-light-1;
             font-family: "Montserrat", sans-serif;
@@ -154,15 +154,15 @@ input[type=submit]{
             padding: .1rem;
             border: none;
             border-bottom: 2px solid $color-grey-light-2;
-            
-    
+
+
             &:focus {
                 border-bottom: 2px solid $color-grey-light-2;
                 background-color: $color-grey-light-2;
                 outline: none;
             }
         }
-        
+
         &__validation {
             position: relative;
 
@@ -176,17 +176,17 @@ input[type=submit]{
             }
         }
     }
-    
+
     .logo {
         width: 100%;
         transform: scale(2.5);
-        
+
     }
 
 .login {
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         height: 100vh;
-        width: 100%;               
+        width: 100%;
     }
 
 .invalid-form {
@@ -196,12 +196,15 @@ input[type=submit]{
     transform: translateX(-50%);
     font-size: .8rem;
     font-weight: 700;
-    color: $color-invalid;    
+    color: $color-invalid;
     font-family: "Montserrat", sans-serif;
     margin: 0 auto;
     padding: 0;
     z-index: 20;
+}
 
+.invalid-credentials{
+  color: $color-invalid;
 }
 
 
