--- a/frontend/src/app/components/home/home/home.component.html
+++ b/frontend/src/app/components/home/home/home.component.html
@@ -1,2 +1,11 @@
-<p>Zalogowany: {{loggedUser.name}}</p>
-<button (click)="logOut()">Wyloguj się</button>
+<app-navbar></app-navbar>
+<app-sidebar></app-sidebar>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-2">
+    </div>
+    <div class="col-10">
+      Zalogowany: {{loggedUser.name}}
+    </div>
+  </div>
+</div>
