Fixed method typo

--- a/frontend/src/app/components/home/home/home.component.html
+++ b/frontend/src/app/components/home/home/home.component.html
@@ -6,6 +6,7 @@
     </div>
     <div class="col-10">
       Zalogowany: {{loggedUser.name}}
+      <button (click)="logOut()">Wyloguj się</button>
     </div>
   </div>
 </div>
