--- a/frontend/src/app/components/public/login/login.component.html
+++ b/frontend/src/app/components/public/login/login.component.html
@@ -28,7 +28,7 @@
               <div class="invalid-form" *ngIf="loginFormControl.password.touched && loginFormControl.password.errors?.required">
                 {{ 'form.fieldRequired' | translate }}
               </div>
-              <div class="invalid-credentials" *ngIf="badCredentialsError">
+              <div class="invalid-form invalid-credentials" *ngIf="badCredentialsError">
                 {{ 'form.invalidData' | translate }}
               </div>
               </div>
