--- a/frontend/src/app/components/public/registration/registration.component.scss
+++ b/frontend/src/app/components/public/registration/registration.component.scss
@@ -52,13 +52,13 @@ body {
 }
 
 .heading-secondary {
-    font-size: 1.3rem;
-    font-weight: 900;
+    font-size: 1.1rem;
+    font-weight: 700;
     font-family: 'Lato', sans-serif;
     color: $color-grey-dark-3;
     text-align: center;
     padding: .1rem;
-    margin: 1.5rem 0;
+    margin-top: 1rem;
 
 }
 
