--- a/frontend/src/app/components/public/welcome/welcome.component.html
+++ b/frontend/src/app/components/public/welcome/welcome.component.html
@@ -1,11 +1,8 @@
 <section class="welcome">
     <header class="header">
-        <div class="header__logo-box">
-            <!--- <img src="assets/images/logo.png" alt="Logo" class="header__logo"> -->
-        </div>
         <div class="header__text-box">
             <h1 class="heading-primary">
-                Lorem ipsum
+                &nbsp;
             </h1>
             <h2 class="heading-secondary">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque provident praesentium adipisci placeat esse libero.
