fixed the font issue in a buttons and forms

--- a/frontend/src/app/components/public/welcome/welcome.component.html
+++ b/frontend/src/app/components/public/welcome/welcome.component.html
@@ -7,8 +7,8 @@
             <h2 class="heading-secondary">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque provident praesentium adipisci placeat esse libero.
             </h2>
-                <a routerLink="login" class="btn">{{ 'login.login' | translate}}</a>
-                <a routerLink="register" class="btn">{{'login.register' | translate }}</a>
+                <a routerLink="login" class="btn-big">{{ 'login.login' | translate}}</a>
+                <a routerLink="register" class="btn-big">{{'login.register' | translate }}</a>
         </div>
     </header>
 </section>
