Minor changes in login form

--- a/frontend/src/app/components/public/account-created/account-created.component.html
+++ b/frontend/src/app/components/public/account-created/account-created.component.html
@@ -6,6 +6,6 @@
       <div class="logged__box">
           <p class="logged__text">{{ 'loggedOut.accountCreated' | translate }}</p>
       </div>
-          <a routerLink="login" class="btn">{{ 'login.login' | translate}}</a>
+          <a routerLink="../login" class="btn">{{ 'login.login' | translate}}</a>
   </div>
 </section>
