--- a/frontend/src/app/components/public/logged-out/logged-out.component.html
+++ b/frontend/src/app/components/public/logged-out/logged-out.component.html
@@ -1,7 +1,7 @@
 <section class="logged-out">
     <div class="logged">
         <div class="logged__img">
-         <!--- <img class="logo" [src]="logoPath" alt="logo"> -->
+         - <img class="logo" [src]="logoPath" alt="logo">
         </div>
         <div class="logged__box">
             <p class="logged__text">{{ 'loggedOut.loggedOut' | translate }}</p>
