changed style of navbar and added sidebar style

--- a/frontend/src/app/components/home/navbar/navbar.component.html
+++ b/frontend/src/app/components/home/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<!--- <header class="header">
   <div class="header__logo-box">
     <img src="../../../../assets/images/logo_small.png" alt="Logo" class="header__logo">
   </div>
@@ -10,4 +10,4 @@
       Wyloguj
     </a>
   </div>
-</header>
+</header> -->
