--- a/frontend/src/app/components/home/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/home/sidebar/sidebar.component.html
@@ -1,34 +1,14 @@
-<div class="sidebar-container">
-  <div class="sidebar-logo">
-    Project Name
-  </div>
-  <ul class="sidebar-navigation">
-    <li class="header">Navigation</li>
-    <li>
-      <a href="#">
-        <i class="fa fa-home" aria-hidden="true"></i> Homepage
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard
-      </a>
-    </li>
-    <li class="header">Another Menu</li>
-    <li>
-      <a href="#">
-        <i class="fa fa-users" aria-hidden="true"></i> Friends
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class="fa fa-cog" aria-hidden="true"></i> Settings
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class="fa fa-info-circle" aria-hidden="true"></i> Information
-      </a>
-    </li>
+<div class="sidebar__container">
+  <div class="sidebar__logo-box">
+   <img src="../../../../assets/images/logo_small.png" class="sidebar__logo">
+   </div>
+  <ul class="sidebar__items">
+    
+    <li><a href="#" class="sidebar__item">Moje konto</a></li>
+    <li><a href="#" class="sidebar__item">Terminarz</a></li>
+    <li><a href="#" class="sidebar__item">Pacjenci</a></li>
+    <li><a href="#" class="sidebar__item">Materiały</a></li>
+    <li><a href="#" class="sidebar__item">Ustawienia</a></li>
+    <li><a href="#" class="sidebar__item">Wyloguj</a></li>    
   </ul>
 </div>
