--- a/frontend/src/app/components/home/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/home/sidebar/sidebar.component.scss
@@ -1,80 +1,105 @@
-.sidebar-container {
-  position: fixed;
-  width: 220px;
-  height: 100%;
-  left: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background: #1a1a1a;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Montserrat:wght@100&display=swap');
+
+//COLORS
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #3eb1c5;
+
+$color-invalid: #ff5930;
+
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
+$color-grey-dark: rgb(85, 85, 85);
+$color-grey-dark-2: #333;
+$color-grey-dark-3: #222;
+
+$color-white: #fff;
+$color-black: #000;
+
+//FONT
+$default-font-size: 1.6rem;
+
+@mixin clearfix {
+    &::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
+
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+html {
+    font-size: 62,5%;
+}
+
+body {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    line-height: 1.7;
+    color: $color-grey-dark;
+}
+
+.sidebar {
+
+  &__container {
+  display: flex;
+  width: 20vw;
+  height: 100vh;
+  flex-direction: column;
+  background-image: linear-gradient(rgba($color-primary-light, .9), rgba($color-primary-dark, .9));
   color: #fff;
+  margin-left: 2rem;
+  box-shadow: 0 .5rem 3rem rgba($color-black, .5);
+
 }
 
-.content-container {
-  padding-top: 20px;
-}
-
-.sidebar-logo {
-  padding: 10px 15px 10px 30px;
-  font-size: 20px;
-  background-color: #2574A9;
-}
-
-.sidebar-navigation {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  position: relative;
-}
-
-.sidebar-navigation li {
-  background-color: transparent;
-  position: relative;
-  display: inline-block;
+  &__logo {
   width: 100%;
-  line-height: 20px;
+  padding: 1rem;
+  padding-top: 2rem;
+  }
+
+  &__items {
+    list-style-type: none;
+  }
+
+  &__item {
+    position: relative;
 }
 
-.sidebar-navigation li a {
-  padding: 10px 15px 10px 30px;
-  display: block;
-  color: #fff;
-}
+  &__item:link,
+  &__item:visited {
+    font-size: 1.3rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    
+    color: $color-grey-light-2;
+    display: block;
+    padding: 1rem;
+    transition: all .5s ease-out;    
+} 
 
-.sidebar-navigation li .fa {
-  margin-right: 10px;
-}
+  &__item:hover {
+    background-color: $color-grey-light-1;
+    color: $color-primary;
+  }
 
-.sidebar-navigation li a:active,
-.sidebar-navigation li a:hover,
-.sidebar-navigation li a:focus {
-  text-decoration: none;
-  outline: none;
-}
+  
 
-.sidebar-navigation li::before {
-  background-color: #2574A9;
-  position: absolute;
-  content: '';
-  height: 100%;
-  left: 0;
-  top: 0;
-  -webkit-transition: width 0.2s ease-in;
-  transition: width 0.2s ease-in;
-  width: 3px;
-  z-index: -1;
-}
 
-.sidebar-navigation li:hover::before {
-  width: 100%;
-}
-
-.sidebar-navigation .header {
-  font-size: 12px;
-  text-transform: uppercase;
-  background-color: #151515;
-  padding: 10px 15px 10px 30px;
-}
-
-.sidebar-navigation .header::before {
-  background-color: transparent;
 }
