added header to the home site

--- a/frontend/src/app/components/home/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/home/sidebar/sidebar.component.html
@@ -1,3 +1,12 @@
+<div class="home">
+<div class="header">
+  <img src="../../../../assets/images/logo_nav.png" class="header__logo">
+  <span class="user">
+    fff
+
+  </span>
+</div>
+
 <div class="sidebar__container">
   <div class="sidebar__logo-box">
    <img src="../../../../assets/images/logo_small.png" class="sidebar__logo">
@@ -11,4 +20,5 @@
     <li><a href="#" class="sidebar__item">Ustawienia</a></li>
     <li><a href="#" class="sidebar__item">Wyloguj</a></li>    
   </ul>
+</div>
 </div>
