--- a/frontend/src/app/components/home/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/home/sidebar/sidebar.component.scss
@@ -49,9 +49,15 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark;
-}
+    }
 
-.sidebar {
+
+.home {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+}    
+.sidebar { 
 
   &__container {
   display: flex;
@@ -91,6 +97,7 @@ body {
     color: $color-grey-light-2;
     display: block;
     padding: 1rem;
+    padding-left: 2rem;
     transition: all .5s ease-out;    
 } 
 
@@ -98,8 +105,18 @@ body {
     background-color: $color-grey-light-1;
     color: $color-primary;
   }
+}
 
+.header {
+  height: 5.5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex: 1;
+  padding: 1rem;
   
 
-
+  &__logo {
+    height: 5rem;
+  }
 }
