--- a/frontend/src/app/components/home/main/main.component.html
+++ b/frontend/src/app/components/home/main/main.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-2"></div>
     <div class="col-10">
-      Zalogowany: {{loggedUser.name}}
+      Zalogowany: {{loggedUser?.name}}
       <button (click)="logOut()">Wyloguj się</button>
 
       <ul *ngFor="let task of taskList">
