--- a/frontend/src/app/components/public/login/login.component.html
+++ b/frontend/src/app/components/public/login/login.component.html
@@ -8,15 +8,12 @@
       </h2>
       <form class="form__box" [formGroup]="loginForm" (ngSubmit)="onLogin()">
           <div class="form__field">
-             <label for="" class="form__label">{{ 'login.email' | translate }}</label>
-              <input formControlName="email" type="text" class="form__input" autoComplete="username">
+             <label for="" class="form__label">{{ 'login.username' | translate }}</label>
+              <input formControlName="username" type="text" class="form__input" autoComplete="username">
               <div class="form__validation">
                 <p class="form__validation--blank">&nbsp;</p>
-                <div class="invalid-form" *ngIf="loginFormControl.email.touched && loginFormControl.email.errors?.required">
+                <div class="invalid-form" *ngIf="loginFormControl.username.touched && loginFormControl.username.errors?.required">
                 {{ 'form.fieldRequired' | translate }}
-                </div>
-                <div class="invalid-form" *ngIf="loginFormControl.email.touched && loginFormControl.email.errors?.email">
-                {{ 'form.invalidEmail' | translate }}
                 </div>
               </div>
           </div>
